fixed overflow for code in md

--- a/docs/assets/css/monokai.css
+++ b/docs/assets/css/monokai.css
@@ -1,6 +1,9 @@
 .highlight code{
     color: white;
 }
+.highlight{
+    overflow-x: auto;
+}
 .highlight pre { background-color: #272822; border-radius: 5px; padding:10px 15px 10px 15px; }
 .highlight .lineno {color: #f8f8f2 ; padding-left: 5px; padding-right:5px; }
 .highlight .hll { background-color: #272822; }
